--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <title>miaukit</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header id="header">miaukit</header>
-    <main id="main">miaukit</main>
+    <header id="header">
+      <nav id="nav">
+        <div id="logo">
+          <img src="img/logo.svg" alt="miaukit-logo" id="imagen-logo" />
+          miaukit
+        </div>
+        <ul id="menu">
+          <li><a href="">¿Que es miaukit?</a></li>
+          <li><a href="">Suscribete</a></li>
+          <li><a href="">Regala uno</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main id="main">
+      <div id="slogan">Felicidad en una cajita para tu gatito!</div>
+    </main>
     <footer id="footer">miaukit</footer>
   </body>
 </html>
